[gd_scene load_steps=9 format=2]

[ext_resource path="res://Levels/EndLevel.gd" type="Script" id=1]
[ext_resource path="res://Player/AbsoluteMovement.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/VT323-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/TutorialText.tscn" type="PackedScene" id=4]
[ext_resource path="res://environment/Wall.tscn" type="PackedScene" id=5]
[ext_resource path="res://Spawns/PlayerSpawn.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=2]

resource_name = "score_effect"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ScoreLayer/Score:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 0.25, 4, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=1]

size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Level" type="Node2D"]

script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 16.4699 ],
"_edit_vertical_guides_": [  ]
}
LAUNCH_CODE_LENGTH = 3
SLOWMOTION_MODIFIER = 0.33
SHOW_DIR_HINT = false
PENETRATE_ENEMY = true
Movement = ExtResource( 2 )
FOLLOWING_SCENE_PATH = "res://Levels/EndLevel.tscn"

[node name="ScoreAnimation" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/score_effect = SubResource( 2 )
blend_times = [  ]

[node name="ScoreTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = true

[node name="ScoreLayer" type="CanvasLayer" parent="." index="2"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Score" type="Label" parent="ScoreLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1197.0
margin_top = 9.0
margin_right = 1237.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="TutorialText" parent="." index="3" instance=ExtResource( 4 )]

margin_left = 175.0
margin_top = 125.0
margin_right = 1163.0
margin_bottom = 598.0
text = "This is the final level.
Survive as long as you can.
Good luck.


P.S.: We gave you penetrating bullets.
You'll need them."

[node name="Obstacles" type="Node2D" parent="." index="4"]

[node name="Limiter" type="Node2D" parent="Obstacles" index="0"]

editor/display_folded = true

[node name="Wall" parent="Obstacles/Limiter" index="0" instance=ExtResource( 5 )]

position = Vector2( 640, -360 )
width = 2560

[node name="Wall2" parent="Obstacles/Limiter" index="1" instance=ExtResource( 5 )]

position = Vector2( 640, 1080 )
width = 2560

[node name="Wall3" parent="Obstacles/Limiter" index="2" instance=ExtResource( 5 )]

position = Vector2( -640, 360 )
height = 1472

[node name="Wall4" parent="Obstacles/Limiter" index="3" instance=ExtResource( 5 )]

position = Vector2( 1920, 360 )
height = 1472

[node name="Wall" parent="Obstacles" index="1" instance=ExtResource( 5 )]

position = Vector2( 652.594, 704.148 )
width = 256

[node name="Wall2" parent="Obstacles" index="2" instance=ExtResource( 5 )]

position = Vector2( 652.594, 15.7042 )
width = 256

[node name="Wall5" parent="Obstacles" index="3" instance=ExtResource( 5 )]

position = Vector2( 1802.4, -234.656 )
rotation = 0.785398
width = 350

[node name="Wall7" parent="Obstacles" index="4" instance=ExtResource( 5 )]

position = Vector2( 1789.78, 952.875 )
rotation = 2.35619
width = 350

[node name="Wall8" parent="Obstacles" index="5" instance=ExtResource( 5 )]

position = Vector2( -511.757, 952.875 )
rotation = -2.35619
width = 350

[node name="Wall6" parent="Obstacles" index="6" instance=ExtResource( 5 )]

position = Vector2( -512.663, -234.656 )
rotation = -0.785398
width = 350

[node name="Wall3" parent="Obstacles" index="7" instance=ExtResource( 5 )]

position = Vector2( 1263.35, 363.124 )
height = 256

[node name="Wall4" parent="Obstacles" index="8" instance=ExtResource( 5 )]

position = Vector2( 15.981, 363.124 )
height = 256

[node name="Spawns" type="Node2D" parent="." index="5"]

editor/display_folded = true

[node name="Position2D" type="Position2D" parent="Spawns" index="0"]

position = Vector2( 651.639, -193.207 )
_sections_unfolded = [ "Transform" ]

[node name="Position2D9" type="Position2D" parent="Spawns" index="1"]

position = Vector2( 2.73248, 4.12131 )
_sections_unfolded = [ "Transform" ]

[node name="Position2D10" type="Position2D" parent="Spawns" index="2"]

position = Vector2( 1285.37, 4.12131 )
_sections_unfolded = [ "Transform" ]

[node name="Position2D11" type="Position2D" parent="Spawns" index="3"]

position = Vector2( 1285.37, 713.744 )

[node name="Position2D12" type="Position2D" parent="Spawns" index="4"]

position = Vector2( 6.52734, 713.744 )

[node name="Position2D2" type="Position2D" parent="Spawns" index="5"]

position = Vector2( 651.639, 896.793 )

[node name="Position2D3" type="Position2D" parent="Spawns" index="6"]

position = Vector2( 1612.9, 389.891 )

[node name="Position2D7" type="Position2D" parent="Spawns" index="7"]

position = Vector2( 1846.52, 1002.76 )

[node name="Position2D8" type="Position2D" parent="Spawns" index="8"]

position = Vector2( 1852.12, -282.099 )

[node name="Position2D4" type="Position2D" parent="Spawns" index="9"]

position = Vector2( -328.166, 389.891 )

[node name="Position2D5" type="Position2D" parent="Spawns" index="10"]

position = Vector2( -562.351, 1009.21 )

[node name="Position2D6" type="Position2D" parent="Spawns" index="11"]

position = Vector2( -566.163, -277.737 )

[node name="PlayerSpawn" parent="." index="6" instance=ExtResource( 6 )]

position = Vector2( 640, 360 )

[node name="AI" type="Node2D" parent="." index="7"]

[connection signal="timeout" from="ScoreTimer" to="." method="increase_score"]


